syntax = "proto3";
package encryptlocker.messages;
option csharp_namespace = "EncryptLocker.Messages";

import "sharedmessages.proto";


message SafeEntryMessage {
  int32 id = 1;
  int32 locker_id = 2;
  int32 parent_id = 3;
  bool is_group = 4;
  CypherValueMessage cypher_title = 5;
  CypherValueMessage cypher_login = 6;
  CypherValueMessage cypher_url = 7;
  CypherValueMessage cypher_note = 8;
}

message CypherValueMessage {
  int32 id = 1;
  int32 safe_entry_id = 2;
  bytes cypher = 3;
  bytes iv = 4;
}

//GetSafeEntries
message GetSafeEntriesRequest { }

message GetSafeEntriesReply {
  repeated SafeEntryMessage safe_entries = 1;
}

//AddSafeEntry
message AddSafeEntryRequest {
  SafeEntryMessage safe_entries = 1;
  CypherValueMessage cypher_password = 2;
}

message AddSafeEntryReply { }

//UpdateSafeEntry
message UpdateSafeEntryRequest {
  SafeEntryMessage safe_entries = 1;
  CypherValueMessage cypher_password = 2;
}

message UpdateSafeEntryReply { }

//DeleteSafeEntry
message DeleteSafeEntryRequest {
  int32 id = 1;
}

message DeleteSafeEntryReply { }

//GetCypherPassword
message GetCypherPasswordRequest {
  int32 safe_entry_id = 1;
}

message GetCypherPasswordReply {
  CypherValueMessage cypher_password = 1;
}

//AddCypherPassword
message AddCypherPasswordRequest {
  SafeEntryMessage safe_entry = 1;
  CypherValueMessage cypher_password = 2;
}

message AddCypherPasswordReply {
  SafeEntryMessage safe_entry = 1;
  CypherValueMessage cypher_password = 2;
}